@@ -7,15 +7,14 @@ class FedExTest < Test::Unit::TestCase
     @locations = TestFixtures.locations
     @carrier   = FedEx.new(fixtures(:fedex))
   end
-  
+    
   def test_us_to_canada
     response = nil
     assert_nothing_raised do
       response = @carrier.find_rates(
                    @locations[:beverly_hills],
                    @locations[:ottawa],
-                   @packages.values_at(:wii),
-                   :test => true
+                   @packages.values_at(:wii)
                  )
       assert !response.rates.blank?
       response.rates.each do |rate|
@@ -25,14 +24,62 @@ class FedExTest < Test::Unit::TestCase
     end
   end
   
+  def test_zip_to_zip_fails
+    begin
+      @carrier.find_rates(
+        Location.new(:zip => 40524),
+        Location.new(:zip => 40515),
+        @packages[:wii]
+      )
+    rescue ResponseError => e
+      assert_equal 'FedEx Error Code: 64354: Required element OriginAddress/CountryCode missing.', e.message
+    end
+  end
+  
+  # FedEx requires a valid origin and destination postal code
+  def test_rates_for_locations_with_only_zip_and_country  
+    response = @carrier.find_rates(
+                 @locations[:bare_beverly_hills],
+                 @locations[:bare_ottawa],
+                 @packages.values_at(:wii)
+               )
+
+    assert response.rates.size > 0
+  end
+  
+  def test_rates_for_location_with_only_country_code
+    begin
+      response = @carrier.find_rates(
+                   @locations[:bare_beverly_hills],
+                   Location.new(:country => 'CA'),
+                   @packages.values_at(:wii),
+                   :items => @items
+                 )
+    rescue ResponseError => e
+      assert_equal 'FedEx Error Code: 61530: Invalid Destination/Address/PostalCode.', e.message
+    end
+  end
+  
+  def test_invalid_recipient_country
+    begin
+      response = @carrier.find_rates(
+                   @locations[:bare_beverly_hills],
+                   Location.new(:country => 'JP', :zip => '108-8361'),
+                   @packages.values_at(:wii),
+                   :items => @items
+                 )
+    rescue ResponseError => e
+      assert_equal 'FedEx Error Code: 61451: Invalid recipient country', e.message
+    end
+  end
+  
   def test_canada_to_us
     response = nil
     assert_nothing_raised do
       response = @carrier.find_rates(
                    @locations[:ottawa],
                    @locations[:beverly_hills],
-                   @packages.values_at(:wii),
-                   :test => true
+                   @packages.values_at(:wii)
                  )
       assert !response.rates.blank?
       response.rates.each do |rate|
@@ -48,8 +95,7 @@ class FedExTest < Test::Unit::TestCase
       response = @carrier.find_rates(
                    @locations[:ottawa],
                    @locations[:beverly_hills],
-                   @packages.values_at(:book, :wii),
-                   :test => true
+                   @packages.values_at(:book, :wii)
                  )
       assert !response.rates.blank?
       response.rates.each do |rate|
